### 07-Jul-2016 - PLL -- Version 8.3.4
    BLEVCORR modified to correctly process new subarrays added by FSW change in
    May 2016.

### 27-Jul-2015 - PLL -- Version 8.3.3
    ACSREJ can now process input list of any length (as allowed by memory).

### 02-Mar-2015 - PLL -- Version 8.3.2
    ACSREJ can now process longer input list (up to 509 characters).

### 10-Oct-2014 - PLL -- Version 8.3.1
    ACS2D standalone executable now reads calibration flags from header, not
    command line.

### 08-Apr-2014 - PLL -- Version 8.3.0
    PCTECORR now supports WFC 2K subarrays.

### 14-Nov-2013 - PLL -- Version 8.2.1
    Fixed ACSREJ bug where files are not being closed properly before being
    reopened. This fix is compulsory due to recent changes to HSTIO.

### 12-Aug-2013 - PLL -- Version 8.2.0
    New ACSCTE sub-module added to separate PCTECORR from ACSCCD.
    ACSCTE runs after ACSCCD but before ACS2D.

### 04-Apr-2013 - PLL -- Version 8.1.3
    Removed FLSCFILE support as it is no longer needed.
    Only FLSHFILE is used for post-flash correction regardless of PCTECORR flag.

### 01-Apr-2013 - PLL -- Version 8.1.2
    Fixed PCTECORR bug in Ticket #992.

### 17-Dec-2012 - PLL -- Version 8.1.2
    Fixed ACSREJ DQ propagation in FLTs.

### 14-Dec-2012 - PLL -- Version 8.1.1
    Fixed ACSREJ ERR calculations for data in ELECTRONS.

### 12-Dec-2012 - PLL -- Version 8.1.0
    FLSHCORR moved from ACSCCD to ACS2D. Added support for FLSCFILE.

### 12-Dec-2012 - PLL -- Version 8.0.7
    DARKCORR uses new time scaling to account for FLASHDUR and extra 3 secs.
    Fixed minor bug in checking whether DRKCFILE exists.

### 18-Jul-2012 - PLL -- Version 8.0.6
    FLSHCORR now happens after PCTECORR.

### 18-May-2012 - WJH -- Version 8.0.5
    File I/O in acsrej updated to avoid problems with CFITSIO upcasting
    file permissions to read/write when not needed. This will allow the
    hstio code to remove logic that allowed the old code to work but