@@ -1,6 +1,6 @@
 /* This string is written to the output primary header as CAL_VER. */
-#define ACS_CAL_VER "8.3.4 (07-Jul-2016)"
-#define ACS_CAL_VER_NUM "8.3.4"
+#define ACS_CAL_VER "8.3.5 (19-Oct-2016)"
+#define ACS_CAL_VER_NUM "8.3.5"
 
 /* name and version number of the CTE correction algorithm */
 #define ACS_CTE_NAME "PixelCTE 2012"
